[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "distortion-residual"
version = "0.1.0"
description = "Differentiable Distortion Residual Level (DRL) metric for audio processing"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Andrew Grathwohl", email = "andrew@grathwohl.me" },
]
keywords = [
    "audio",
    "dsp",
    "distortion",
    "differentiable",
    "pytorch",
    "mastering",
    "dynamics",
    "loss-function",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Multimedia :: Sound/Audio",
    "Topic :: Multimedia :: Sound/Audio :: Analysis",
    "Topic :: Scientific/Engineering",
]
dependencies = [
    "torch>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.8",
]
audio = [
    "torchaudio>=2.0",
    "soundfile>=0.12",
]

[project.urls]
Homepage = "https://github.com/agrathwohl/distortion-residual"
Repository = "https://github.com/agrathwohl/distortion-residual"
Issues = "https://github.com/agrathwohl/distortion-residual/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/distortion_residual"]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.pytest.ini_options]
testpaths = ["tests"]
